2005-05-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_windows.h: worry about Windows CE when check Interlocked
	API for MIPS. Patch by Michael Fink.

	* build/lib/configure.bat: remove the -p option by autodetecting platform.
	Patch by Michael Fink.

	* build/Makefiles/nmake/evc3.mak, evc4.mak: corrects the evc4 makefiles
	to always use the /GF switch [string pooling]. Patch by Michael Fink.

	* doc/README.evc3, doc/README.evc4: reflect changes above.
	Patch by Michael Fink.

	* stlport/errno.h, stlport/time.h: when building for evc, including
	errno.h and time.h often outputs the message in the #pragma statement
	that including this file won't include the native one, since there is no
	native include file. Now the text is only output when not building the library
	and when the file is included directly, not via another STLport header file.
	[Patch by Michael Fink.]


2005-05-29  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Add opendir returned value when listing
	installed locale under linux.

	* build/Makefiles/gmake: Patch from Zdenek Nemec for Mac OS X support.

2005-05-27  Francois Dumont  <dums@stlport...>

	* src/locale_impl.cpp: Add an initialization segment specification to make
	global static variable ios_base::Init instance initialization prioritized
	compare to STLport static global variable. iostreams like cout can be used
	in global static variable initialization.

2005-05-26  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/evc4.mak: Patch from Ulrich Eckhardt to use CC
	environment variable defined by WCE*.bat script rather than redefining
	it.
	
	* src/locale.cpp, locale_impl.cpp, locale_catalog.cpp: New pass to move
	static global variable in function to make initialization order clear.
	
2005-05-25  Francois Dumont  <dums@stlport...>

	* stlport/ciso646: Creation of this missing C++ standard header STLport
	wrapper.
	
	* stlport/stl/_istream.h, _num_get.c, _algo.c, _monetary.c, _time_facets.h,